[package]
name = "gptfusion-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

rand = "0.8"

# torch-sys = "0.11"

tch = "0.11"

rust-bert = { git = "https://github.com/guillaume-be/rust-bert.git" }

diffusers = { git = "https://github.com/LaurentMazare/diffusers-rs.git" }

mini-moka = "0.10"

sliding_window_alt = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

chrono = { version = "0.4", features = ["serde"] }
